添加Message 实体类,WebService的函数声明

--- a/SnnuWebService.csproj
+++ b/SnnuWebService.csproj
@@ -58,9 +58,20 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="News.asmx" />
+    <Content Include="Notice.asmx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Message.cs" />
+    <Compile Include="News.asmx.cs">
+      <DependentUpon>News.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Notice.asmx.cs">
+      <DependentUpon>Notice.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
