--- a/SnnuWebService.csproj
+++ b/SnnuWebService.csproj
@@ -69,6 +69,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Message.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="News.asmx.cs">
       <DependentUpon>News.asmx</DependentUpon>
