--- a/Web.config
+++ b/Web.config
@@ -12,7 +12,19 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
+  <connectionStrings>
+    <add name="Conn"
+      connectionString="Database='dbs';Data Source = 'localhost'; User Id = 'root'; Password='root';charset='utf8';pooling=true"/>
+  </connectionStrings>
   <system.web>
+    <webServices>
+      <protocols>
+        <add name="HttpSoap"/>
+        <add name="HttpPost"/>
+        <add name="HttpGet"/>
+        <add name="Documentation"/>
+      </protocols>
+    </webServices>
     <compilation debug="true" targetFramework="4.5.2"/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
