--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DynamicLanguageRuntime" version="1.2.2" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
-  <package id="IronPython" version="2.7.9" targetFramework="net452" />
+  <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net452" />
   <package id="MySql.Data" version="8.0.13" targetFramework="net452" />
 </packages>
