添加CardItem实体类,相关web服务

--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -10,7 +10,7 @@
    -->
   <connectionStrings>
     <add name="Conn"
-      connectionString="Database='dbs';Data Source = 'localhost'; User Id = 'root'; Password='root';charset='utf8';pooling=true"
+      connectionString="Database='aa';Data Source = 'localhost'; User Id = 'root'; Password='root';charset='utf8';pooling=true"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   <system.web>
