--- a/SnnuWebService.csproj
+++ b/SnnuWebService.csproj
@@ -82,9 +82,11 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="CampusCard.asmx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\Message.cs" />
+    <Compile Include="Model\CardItem.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="News.asmx.cs">
       <DependentUpon>News.asmx</DependentUpon>
@@ -96,6 +98,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
+    <Compile Include="CampusCard.asmx.cs">
+      <DependentUpon>CampusCard.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
