--- a/Web.config
+++ b/Web.config
@@ -14,7 +14,7 @@
   -->
   <connectionStrings>
     <add name="Conn"
-      connectionString="Database='dbs';Data Source = 'localhost'; User Id = 'root'; Password='root';charset='utf8';pooling=true"/>
+      connectionString="Database='aa';Data Source = 'localhost'; User Id = 'root'; Password='root';charset='utf8';pooling=true"/>
   </connectionStrings>
   <system.web>
     <webServices>
