添加图书馆预约到馆信息数据实体类

--- a/SnnuWebService.csproj
+++ b/SnnuWebService.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="DAL\Message.cs" />
     <Compile Include="Model\CardItem.cs" />
+    <Compile Include="Model\LibiaryItem.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="News.asmx.cs">
       <DependentUpon>News.asmx</DependentUpon>
