--- a/SnnuWebService.csproj
+++ b/SnnuWebService.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Libiary.asmx" />
     <Content Include="News.asmx" />
     <Content Include="Notice.asmx" />
     <Content Include="Web.config">
@@ -86,6 +87,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\Message.cs" />
+    <Compile Include="Libiary.asmx.cs">
+      <DependentUpon>Libiary.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Model\CardItem.cs" />
     <Compile Include="Model\LibiaryItem.cs" />
     <Compile Include="Model\Message.cs" />
@@ -98,6 +103,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spider\Order.cs" />
     <Compile Include="Spider\Spider.cs" />
     <Compile Include="Spider\SpiderCard.cs" />
     <Compile Include="SqlHelper.cs" />
