--- a/SnnuWebService.csproj
+++ b/SnnuWebService.csproj
@@ -77,15 +77,19 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CampusCard.asmx" />
     <Content Include="Libiary.asmx" />
     <Content Include="News.asmx" />
     <Content Include="Notice.asmx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="CampusCard.asmx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CampusCard.asmx.cs">
+      <DependentUpon>CampusCard.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DAL\Message.cs" />
     <Compile Include="Libiary.asmx.cs">
       <DependentUpon>Libiary.asmx</DependentUpon>
@@ -107,15 +111,12 @@
     <Compile Include="Spider\Spider.cs" />
     <Compile Include="Spider\SpiderCard.cs" />
     <Compile Include="SqlHelper.cs" />
-    <Compile Include="CampusCard.asmx.cs">
-      <DependentUpon>CampusCard.asmx</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Properties\PublishProfiles\WebService.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
